update split apply combine strategy

--- a/functions.qmd
+++ b/functions.qmd
@@ -207,8 +207,9 @@ df
 
 :::{.callout-note}
 ### 해들리 위캠 어록
+<br>
 
-* 중복은 의도를 숨기게 되고, 복사하여 붙여넣기 두번했다면 함수를 작성할 시점이 되었다. (Duplication hides the intent. If you have copied-and-pasted twice, it is time to write a function.)
+중복은 의도를 숨기게 되고, 복사하여 붙여넣기 두번했다면 함수를 작성할 시점이 되었다. (Duplication hides the intent. If you have copied-and-pasted twice, it is time to write a function.)
 
 :::
 
@@ -279,9 +280,11 @@ draw_dice(3)
 
 ## 함수 구성요소 {#funciton-component}
 
+한걸음 더 들어가, 함수를 작성할 때는 인자의 유효성 검사, 함수 몸통에서 데이터 처리, 반환값 등 다양한 측면을 고려해야 한다. 특히 인자값 검사는 함수의 안정성과 효율성을 위해 중요하며, 그 중요성을 반영하여 다양한 도구가 소개되어 있다. 또한 반환값이 여러 개인 경우에는 적절한 방법으로 반환값을 처리해야 한다. 함수를 작성할 때는 이러한 요소들을 종합적으로 고려하여 효율적이고 안정적인 함수를 구현해야 한다.
+
 ### 인자 {#function-component-argument}
 
-함수 구성요소 중 중요한 요소로 인자(argument)를 꼽을 수 있다. 
+함수 구성요소 중 중요한 요소로 인자를 꼽을 수 있다. 
 인자는 크게 두가지로 나뉜다.
 
 - 데이터 인자(data argumnets): 대다수 함수는 기본적으로 데이터에 대한 연산을 가정하고 있다. 따라서 데이터를 함수 인자로 지정하여 이를 함수몸통에서 처리하고 결과를 반환시키는 것은 당연한 귀결이다.
