--- a/function_plyr.qmd
+++ b/function_plyr.qmd
@@ -1,17 +1,14 @@
-# 분할-적용-병합 전략 {#split-apply-combine-histroy}
+---
+output: html_document
+editor_options: 
+  chunk_output_type: console
+---
+# 분할-적용-병합 전략 {#sec-split-apply-combine-histroy}
 
-데이터 분석에서 흔히 사용되는 방법 중 하나가 **분할-적용-병합(Split-Apply-Combine)** 전략[@wickham2011split]이다. 즉, 큰 문제를 작은 문제로 쪼개고 각 문제에 대해서 적절한 연산(예를 들어 요약통계량)을 취하고 이를 결합하는 방법이 많이 사용되는 방법이다. 예를 들어 [재현가능한 과학적 분석을 위한 R - "분할-적용-병합 전략"](https://statkclee.github.io/r-novice-gapminder/12-plyr-kr.html)에 나온 것처럼 각 그룹별로 쪼갠 후에 각 그룹별로 평균을 내고 이를 조합한 사례가 전반적인 큰 그림을 그리는데 도움이 될 수 있다. 여기서 평균을 사용했는데 요약(summarize) 뿐만 아니라, 윈도우 함수, 이를 일반화한 `do()` 함수도 포함된다.
+데이터 분석에서 흔히 사용되는 방법 중 하나가 **분할-적용-병합(Split-Apply-Combine)** 전략[@wickham2011split]이다. 즉, 큰 문제를 작은 문제로 쪼개고 각 문제에 대해서 적절한 연산(예를 들어 요약통계량)을 취하고 이를 결합하는 방법이 많이 사용되는 방법이다. 예를 들어 [재현가능한 과학적 분석을 위한 R - "분할-적용-병합 전략"](https://statkclee.github.io/r-novice-gapminder/12-plyr-kr.html)에 나온 것처럼 각 그룹별로 쪼갠 후에 각 그룹별로 평균을 내고 이를 조합한 사례가 전반적인 큰 그림을 그리는데 도움이 될 수 있다. 여기서 평균을 사용했는데 요약(summarize) 뿐만 아니라, 윈도우 함수, 이를 일반화한 `do()` 함수도 포함된다.[^split-apply-combine]
 
 [^split-apply-combine]: [cool but useless, "Split-Apply-Combine: My search for a replacement for 'group_by + do'"](https://coolbutuseless.bitbucket.io/2018/03/03/split-apply-combine-my-search-for-a-replacement-for-group_by---do/)
 
-![분할-적용-병합 작업과정 도식화](images/split-apply-combine.png){#fig-split-apply-combine-strategy}
-
-- 선사시대 Split-Apply-Combine: split, lapply, do.call(rbind, …)
-- 석기시대(plyr) Split-Apply-Combine: plyr::ddply
-- 초기 tidyverse 시대 Split-Apply-Combine: group_by, do
-- 중기 tidyverse 시대 Split-Apply-Combine: group_by & by_slice
-- 현대 tidyverse 시대 Split-Apply-Combine: group_by, nest, mutate(map())
-- tidyverse/base 하이브리드 조합 Split-Apply-Combine: split, map_dfr
 
 ## `gapminder` 데이터셋 {#gapminder-dataset}
 
@@ -35,13 +32,36 @@ calc_GDP <- function(dat, year=NULL, country=NULL) {
 }
 
 gapminder %>% 
-  mutate(GDP = pop * gdpPercap) %>% 
-  DT::datatable()
+  mutate(GDP = pop * gdpPercap) 
 ```
 
 ## 진화의 역사
 
-### 선사시대 `split`, `lapply`, `do.call` {#ddplyr-prehistoric}
+R에서 데이터 처리를 위한 분할-적용-병합 전략은 시간이 지남에 따라 발전해왔다. 
+초기에는 베이스 R 함수를 사용하여 데이터를 처리했지만, 
+점차 새로운 패키지와 함수가 개발되면서 더 효율적이고 가독성 높은 코드를 작성할 수 있게 되었다. 각 시대별로 주로 사용된 패키지와 함수가 발전함에 따라
+데이터 처리에 대한 인식과 요구 사항을 반영하고 있기 때문이다.
+
+- 선사시대 분할-적용-병합: `split`, `lapply`, `do.call(rbind, ...)`
+  - 기본 R 함수를 사용하여 데이터를 분할하고, `lapply`로 각 분할에 함수를 적용한 후, `do.call`과 `rbind`를 사용하여 결과를 결합한다.
+
+- 석기시대(`plyr`) 분할-적용-병합: `plyr::ddply`
+  - `plyr` 패키지의 `ddply` 함수를 사용하여 데이터를 분할, 함수 적용, 결합을 한 번에 처리한다.
+
+- 초기 tidyverse 시대 분할-적용-병합: `group_by`, `do`
+  - `dplyr` 패키지 `group_by` 함수를 사용하여 데이터를 그룹화하고, `do` 함수를 사용하여 각 그룹에 함수를 적용한다.
+
+- 중기 tidyverse 시대 분할-적용-병합: `group_by` & `by_slice`
+  - `group_by` 함수로 데이터를 그룹화한 후, `by_slice` 함수를 사용하여 각 그룹에 함수를 적용한다.
+
+- 현대 tidyverse 시대 분할-적용-병합: `group_by`, `nest`, `mutate(map())`
+  - `group_by` 함수로 데이터를 그룹화하고, `nest` 함수로 각 그룹을 중첩 데이터프레임으로 변환한 후, `mutate`와 `purrr` 패키지의 `map` 함수를 사용하여 각 그룹에 함수를 적용한다.
+
+- tidyverse/base 하이브리드 조합 분할-적용-병합: `split`, `map_dfr`
+  - 기본 R의 `split` 함수로 데이터를 분할하고, `purrr` 패키지 `map_dfr` 함수를 사용하여 각 분할에 함수를 적용하고 결과를 데이터 프레임으로 결합한다.
+
+
+### 선사시대 {#ddplyr-prehistoric}
 
 선사시대에는 대륙별로 `split` 한 후에 `lapply()` 함수를 사용해서 앞서 정의한 `calc_GDP` 함수로 GDP를 계산한 후에 평균을 다시 계산한 뒤에 마지막으로 `do.call()` 함수로 병합(combine)하여 GDP 대륙별 평균을 구할 수 있다.
 
@@ -55,7 +75,7 @@ mean_GDP_df
 ```
 
 
-### `plyr::ddply` {#ddplyr-stone-age}
+### 석기시대 {#ddplyr-stone-age}
 
 석기시대 `plyr` 팩키지 `ddply` 함수를 사용해서 각 대륙별로 쪼갠 후에 각 대륙별 평균 GDP를 구할 수 있다.
 
@@ -69,7 +89,7 @@ plyr::ddply(
 )
 ```
 
-### 초기 tidyverse 시대: `group_by`, `do` {#ddplyr-early-tidyverse}
+### 초기 `tidyverse` 시대 {#ddplyr-early-tidyverse}
 
 `group_by()` + `do()`를 결합하여 임의 연산작업을 각 그룹별로 수행시킬 수 있다.
 
@@ -82,7 +102,7 @@ gapminder %>%
 ```
 
 
-### 중기 tidyverse 시대: `group_by`, `by_slice` {#ddplyr-midage-tidyverse}
+### 중기 `tidyverse` 시대 {#ddplyr-midage-tidyverse}
 
 `group_by()` + `by_slice()`를 결합하여 분할-적용-병합 전략을 적용시킬 수도 있으나 `by_slice()` 함수가 `dplyr::do()` 함수와 같은 작업을 수행했고, `purrrlyr`에 갔다가... 그후 행방이 묘연해졌다. 
 
@@ -95,7 +115,7 @@ gapminder %>%
   purrrlyr::by_slice(~mean(.$gdp), .collate = 'rows')
 ```
 
-### 현대 tidyverse 시대: `group_by`, `nest`, `mutate(map())` {#ddplyr-current-tidyverse}
+### 현대 `tidyverse` 시대 {#ddplyr-current-tidyverse}
 
 현대 분할-적용-병합 전략은 `group_by` + `nest()`로 그룹별 데이터프레임으로 만들고, `mutate(map())`을 사용해서 `calc_GDP()` 함수를 적용시켜 GDP를 계산하고, `summarize()` 함수를 적용시켜 각 대륙별 평균 GDP를 계산한다. 마지막으로 `unnest`를 적용시켜 원하는 산출물을 얻는다.
 
@@ -109,7 +129,7 @@ gapminder %>%
 ```
 
 
-### tidyverse/base 하이브리드 조합: `split`, `map_dfr` {#base-current-tidyverse}
+### `tidyverse`/base R 조합 {#base-current-tidyverse}
 
 마지막으로 base R `split()` 함수와 `map_dfr()` 함수를 조합해서 원하는 결과를 얻어낼 수도 있다.
 
